<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_back"
    android:orientation="vertical"
    android:id="@+id/body"
     >
    
    <RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/head_back" >
	    
        <ImageButton
	        android:id="@+id/btn_back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="8dp"
	        android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
	        android:src="@drawable/ic_back_2"
	        android:background="@null"
	         />
	    <TextView
	        android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/head_text"
            android:textSize="@dimen/title"
            android:text="@string/feedback" />
	
	</RelativeLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:padding="10dp"
	    android:orientation="vertical">
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="10dp" 
	        android:textColor="@color/feedback_hint"
	        android:textSize="@dimen/feedback_hint"
	        android:text="@string/feedback_hint" />
	    <EditText 
	        android:id="@+id/feed_content"
	        android:layout_width="fill_parent"
	        android:layout_height="200dp" 
	        android:layout_marginBottom="10dp"
	       	android:gravity="top"
	       	android:textColor="#333"
	       	android:textCursorDrawable="@null"
	       	android:background="@drawable/text_area"
	       	 />
	    <Button 
	        android:id="@+id/submit"
	        android:layout_width="wrap_content"
	        android:layout_height="35dp"
	        android:layout_gravity="center"
	        android:background="@drawable/submit_btn"
	        android:text="@string/submit" />
	    
	</LinearLayout>

</LinearLayout>
